<resources>
    <string name="app_name">Fishhh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="PCode">Postal Code</string>
    <string name="CredCard">Credit Card Number</string>
    <string name="SCode">###</string>
    <string name="MExpire">MM</string>
    <string name="YExpire">YYYY</string>
</resources>
