<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".5"
        android:background="@drawable/waterbackground1">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="First And Last Name:"
                android:textSize="25dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/FirstNameInput"
                    style="@style/text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/FName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/FirstNameEdit"
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/LastNameInput"
                    style="@style/text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/FirstNameInput"
                    android:layout_toRightOf="@id/FirstNameInput"
                    android:hint="@string/LName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LastNameEdit"
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="Billing Address:"
                android:textSize="25dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddressInput"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddressEdit"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CityInput"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/City">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CityEdit"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PostalCodeInput"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/PostalCodeEdit"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="Card Information:"
                android:textSize="25dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CreditCardInput"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CredCard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CreditCardEdit"
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/SecurityInput"
                    style="@style/text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/SCode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/SecurityEdit"
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ExpireMonthInput"
                    style="@style/text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/SecurityInput"
                    android:layout_toRightOf="@id/SecurityInput"
                    android:hint="@string/MExpire">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ExpireMonthEdit"
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ExpireYearInput"
                    style="@style/text"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ExpireMonthInput"
                    android:layout_toRightOf="@id/ExpireMonthInput"
                    android:hint="@string/YExpire">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ExpireYearEdit"
                        style="@style/text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/next_button"
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="Next" />

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/next_button"
                    android:layout_toLeftOf="@id/next_button"
                    android:text="Cancel" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>